--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,7 @@
 # OpenAI API Key
 # Get your API key from https://platform.openai.com/api-keys
 OPENAI_API_KEY=sk-proj-your-key-here
+
+MISTRAL_API_KEY=
+
+ELEVENLABS_API_KEY=
